--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,16 @@
     <!--loadViewHelp-->
     <string name="bad_wangluo">加载失败\n轻触重新加载</string>
     <string name="no_content">没有更多内容</string>
+
+    <!--title-->
+    <string name="title_left">返回</string>
+    <string name="title_center">天气</string>
+    <string name="title_right">帮助</string>
+
+    <!--MainActivity-->
+    <string name="main_aty_weather">天气</string>
+    <string name="main_aty_constellation">星座</string>
+    <string name="main_aty_joke">笑话</string>
+    <string name="main_aty_filmreview">影评</string>
+    <string name="main_aty_more">更多功能，敬请期待！</string>
 </resources>
