增加请求逻辑

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,9 @@
     <string name="film_aty_inland">内地</string>
     <string name="film_aty_north">北美</string>
     <string name="film_aty_hk">香港</string>
+    <!--constellation-->
+    <string name="constellation_aty_today">本日</string>
+    <string name="constellation_aty_month">本月</string>
+    <string name="constellation_aty_year">本年</string>
+    <string name="constellation_aty_title">星座</string>
 </resources>
